ci: restore videos

--- a/apps/web-e2e/project.json
+++ b/apps/web-e2e/project.json
@@ -18,13 +18,7 @@
       },
       "configurations": {
         "test": {
-          "testFiles": [
-            "pages.spec.ts",
-            "resource.spec.ts",
-            "types.spec.ts",
-            "google-fonts.spec.ts",
-            "provider-page-content-container.spec.ts"
-          ]
+          "testFiles": []
         },
         "ci": {}
       }
