--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "git:prune": "git gc --aggressive --prune=now",
     "prepare": "husky",
     "knip": "knip",
-    "aider": "node scripts/aider/run.js"
+    "aider": "node scripts/aider/run.js",
+    "nx:clean-cache": "rimraf .nx/cache && mkdir -p .nx/cache"
   },
   "private": true,
   "dependencies": {
