--- a/nx.json
+++ b/nx.json
@@ -4,6 +4,7 @@
   "parallel": 3,
   "defaultProject": "web",
   "maxCacheSize": "2GB",
+  "nxCloudId": "67fcdb6b7eeb2ddcc348061b",
   "plugins": [
     "@codelab/tsc-check",
     {
