--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "git:prune": "git gc --aggressive --prune=now",
     "prepare": "husky",
     "knip": "knip",
-    "aider": "node scripts/aider/run.js"
+    "aider": "node scripts/aider/run.js",
+    "nx:clean-cache": "rimraf .nx/cache && mkdir -p .nx/cache"
   },
   "private": true,
   "dependencies": {
@@ -201,14 +202,14 @@
     "jsonwebtoken": "9.0.2",
     "jwks-rsa": "3.0.1",
     "lexical": "0.17.1",
-    "mobx": "6.13.6",
-    "mobx-keystone": "1.11.1",
+    "mobx": "6.13.7",
+    "mobx-keystone": "1.11.4",
     "mobx-react-lite": "4.1.0",
     "multer": "1.4.5-lts.1",
     "neo4j-driver": "5.28.1",
     "nestjs-pino": "4.3.0",
     "nestjs-typebox": "3.1.1",
-    "next": "15.2.4",
+    "next": "15.2.5",
     "next-seo": "6.6.0",
     "next-themes": "0.4.4",
     "node-fetch": "^3.3.2",
@@ -304,22 +305,22 @@
     "@nestjs/schematics": "11.0.0",
     "@nestjs/testing": "11.0.7",
     "@next/eslint-plugin-next": "15.1.6",
-    "@nx/devkit": "20.6.4",
-    "@nx/eslint": "20.6.4",
-    "@nx/eslint-plugin": "20.6.4",
-    "@nx/jest": "20.6.4",
-    "@nx/js": "20.6.4",
-    "@nx/nest": "20.6.4",
-    "@nx/next": "20.6.4",
-    "@nx/node": "20.6.4",
-    "@nx/playwright": "20.6.4",
-    "@nx/plugin": "20.6.4",
-    "@nx/react": "20.6.4",
-    "@nx/storybook": "20.6.4",
-    "@nx/vite": "20.6.4",
-    "@nx/web": "20.6.4",
-    "@nx/webpack": "20.6.4",
-    "@nx/workspace": "20.6.4",
+    "@nx/devkit": "20.7.2",
+    "@nx/eslint": "20.7.2",
+    "@nx/eslint-plugin": "20.7.2",
+    "@nx/jest": "20.7.2",
+    "@nx/js": "20.7.2",
+    "@nx/nest": "20.7.2",
+    "@nx/next": "20.7.2",
+    "@nx/node": "20.7.2",
+    "@nx/playwright": "20.7.2",
+    "@nx/plugin": "20.7.2",
+    "@nx/react": "20.7.2",
+    "@nx/storybook": "20.7.2",
+    "@nx/vite": "20.7.2",
+    "@nx/web": "20.7.2",
+    "@nx/webpack": "20.7.2",
+    "@nx/workspace": "20.7.2",
     "@parcel/watcher": "2.4.1",
     "@playwright/test": "1.51.1",
     "@sentry/types": "8.54.0",
@@ -405,8 +406,8 @@
     "dotenv": "15.0.0",
     "env-cmd": "10.1.0",
     "eslint": "8.57.0",
-    "eslint-config-next": "15.1.6",
-    "eslint-config-prettier": "9.0.0",
+    "eslint-config-next": "15.3.0",
+    "eslint-config-prettier": "10.1.2",
     "eslint-import-resolver-node": "0.3.9",
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-ban": "2.0.0",
@@ -444,7 +445,7 @@
     "minimatch": "9.0.4",
     "msw": "2.7.0",
     "msw-storybook-addon": "2.0.4",
-    "nx": "20.6.4",
+    "nx": "20.7.2",
     "pino-pretty": "13.0.0",
     "postcss": "8.4.45",
     "swc-loader": "0.2.6",
