--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -924,9 +924,6 @@
       "@codelab/frontend/abstract/types": [
         "libs/frontend/abstract/types/src/index.ts"
       ],
-      "@codelab/frontend/infra/action": [
-        "libs/frontend/infra/action/src/index.ts"
-      ],
       "@codelab/frontend/infra/connector": [
         "libs/frontend/infra/connector/src/index.ts"
       ],
@@ -942,6 +939,7 @@
       "@codelab/frontend/infra/shared": [
         "libs/frontend/infra/shared/src/index.ts"
       ],
+      "@codelab/frontend/infra/ws": ["libs/frontend/infra/ws/src/index.ts"],
       "@codelab/frontend/presentation/codelab-ui": [
         "libs/frontend/presentation/codelab-ui/src/index.ts"
       ],
