--- a/libs/tools/workspace/tsconfig.spec.json
+++ b/libs/tools/workspace/tsconfig.spec.json
@@ -2,7 +2,6 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../../dist/out-tsc",
-    "module": "commonjs",
     "types": ["jest", "node"]
   },
   "include": [
@@ -10,6 +9,7 @@
     "**/*.json",
     "src/**/*.test.ts",
     "src/**/*.spec.ts",
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    "**/*.ts"
   ]
 }
