--- a/libs/shared/domain/module/field/project.json
+++ b/libs/shared/domain/module/field/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "field",
+  "name": "shared-domain-module-field",
   "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/shared/domain/module/field/src",
   "projectType": "library",
