--- a/apps/web-e2e/tsconfig.spec.json
+++ b/apps/web-e2e/tsconfig.spec.json
@@ -1,4 +1,11 @@
 {
-  // Used by `tsc-check`
-  "extends": "./tsconfig.json"
+  "extends": "../../tsconfig.base.json",
+  "compilerOptions": {
+    "outDir": "./out-tsc/spec"
+  },
+  "references": [
+    {
+      "path": "./tsconfig.lib.json"
+    }
+  ]
 }
