--- a/apps/landing/tsconfig.json
+++ b/apps/landing/tsconfig.json
@@ -27,5 +27,7 @@
     "tailwind.config.cjs",
     "next.config.mjs"
   ],
-  "exclude": ["node_modules", "jest.config.ts", "**/*.spec.ts", "**/*.test.ts"]
+  "exclude": ["node_modules", "jest.config.ts", "**/*.spec.ts", "**/*.test.ts"],
+  "files": [],
+  "references": []
 }
