--- a/libs/shared/infra/logging/package.json
+++ b/libs/shared/infra/logging/package.json
@@ -5,6 +5,11 @@
       "default": "./src/index.ts",
       "import": "./src/index.ts",
       "types": "./src/index.ts"
+    },
+    "./server": {
+      "default": "./src/server/index.ts",
+      "import": "./src/server/index.ts",
+      "types": "./src/server/index.ts"
     }
   },
   "devDependencies": {
