--- a/libs/tools/workspace/package.json
+++ b/libs/tools/workspace/package.json
@@ -5,5 +5,12 @@
   "executors": "./executors.json",
   "dependencies": {
     "@nx/devkit": "19.0.4"
+  },
+  "exports": {
+    ".": {
+      "default": "./src/index.ts",
+      "import": "./src/index.ts",
+      "types": "./src/index.ts"
+    }
   }
 }
