wip: migrate to project references

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -23,7 +23,8 @@
       "cypher",
       "styled-components",
       "uniforms"
-    ]
+    ],
+    "noEmit": true
   },
   "include": [
     "**/*.ts",
