--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@ant-design/pro-components": "2.8.4",
     "@apollo/client": "3.12.3",
     "@apollo/server": "4.11.2",
-    "@auth0/nextjs-auth0": "4.4.2",
+    "@auth0/nextjs-auth0": "4.4.1",
     "@codelab-codegen/codelab-preset": "file:dist/libs/external/codelab-codegen/codelab-preset",
     "@codelab-codegen/typescript-fetch": "file:dist/libs/external/codelab-codegen/typescript-fetch",
     "@codelab-codegen/typescript-server-fetch": "file:dist/libs/external/codelab-codegen/typescript-server-fetch",
@@ -474,7 +474,9 @@
   },
   "pnpm": {
     "overrides": {},
-    "patchedDependencies": {}
+    "patchedDependencies": {
+      "graphql-request": "patches/graphql-request.patch"
+    }
   },
   "resolutions": {},
   "nx": {
