--- a/apps/web-e2e/.eslintrc.json
+++ b/apps/web-e2e/.eslintrc.json
@@ -10,7 +10,7 @@
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "parserOptions": {
-        "project": ["apps/web-e2e/tsconfig(.*)?.json"]
+        "project": ["apps/web-e2e/tsconfig(.*).json"]
       },
       "rules": {}
     },
