--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -10,7 +10,7 @@
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "parserOptions": {
-        "project": ["apps/web/tsconfig(.*)?.json"]
+        "project": ["apps/web/tsconfig(.*).json"]
       },
       "rules": {
         "jsx-a11y/anchor-is-valid": "off",
