--- a/libs/shared/infra/gql-client/tsconfig.lib.json
+++ b/libs/shared/infra/gql-client/tsconfig.lib.json
@@ -1,10 +1,12 @@
 {
   "extends": "../../../../tsconfig.base.json",
+  "type": "module",
   "compilerOptions": {
     "outDir": "./out-tsc/lib",
     "declaration": true,
+    "moduleResolution": "bundler",
+    "module": "esnext",
     "types": ["node"],
-    "module": "commonjs",
     "forceConsistentCasingInFileNames": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
