--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -6,7 +6,8 @@
     "sourceMap": true,
     "composite": true,
     "declaration": true,
-    "moduleResolution": "nodenext",
+    "moduleResolution": "bundler",
+    "module": "esnext",
     "strict": true,
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
@@ -17,7 +18,6 @@
     "resolveJsonModule": true,
     "importHelpers": true,
     "target": "es2021",
-    "module": "nodenext",
     "types": ["node", "worker-loader"],
     "typeRoots": ["types", "node_modules/@types"],
     "lib": ["es2021", "dom"],
