--- a/package.json
+++ b/package.json
@@ -282,21 +282,7 @@
     "yargs": "17.7.2",
     "zen-observable-ts": "1.1.0",
     "zod": "3.23.8",
-    "zustand": "4.5.2",
-    "@anthropic-ai/sdk": "^0.39.0",
-    "boxen": "^8.0.1",
-    "commander": "^11.1.0",
-    "cli-table3": "^0.6.5",
-    "dotenv": "^16.3.1",
-    "fastmcp": "^1.20.5",
-    "figlet": "^1.8.0",
-    "fuse.js": "^7.0.0",
-    "gradient-string": "^3.0.0",
-    "helmet": "^8.1.0",
-    "inquirer": "^12.5.0",
-    "lru-cache": "^10.2.0",
-    "openai": "^4.89.0",
-    "ora": "^8.2.0"
+    "zustand": "4.5.2"
   },
   "devDependencies": {
     "@0no-co/graphqlsp": "1.12.12",
@@ -401,6 +387,9 @@
     "@typescript-eslint/eslint-plugin": "7.17.0",
     "@typescript-eslint/parser": "7.17.0",
     "@typescript-eslint/utils": "7.17.0",
+    "@vitejs/plugin-react": "^4.4.1",
+    "@vitejs/plugin-react-swc": "^3.9.0",
+    "@vitest/ui": "^3.1.1",
     "ajv-formats": "2.1.1",
     "ajv-keywords": "5.1.0",
     "autoprefixer": "10.4.14",
@@ -470,6 +459,8 @@
     "typescript": "5.5.4",
     "utility-types": "3.10.0",
     "vite": "6.2.1",
+    "vite-plugin-dts": "^4.5.3",
+    "vitest": "^3.1.1",
     "wait-on": "6.0.1"
   },
   "pnpm": {
