--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,7 +19,7 @@
     "importHelpers": true,
     "target": "es2021",
     "types": ["node", "worker-loader"],
-    "typeRoots": ["types"],
+    "typeRoots": ["types", "node_modules/@types"],
     "lib": ["es2021", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
