--- a/libs/shared/infra/gqlgen/package.json
+++ b/libs/shared/infra/gqlgen/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {},
   "nx": {
+    "name": "shared-infra-gqlgen",
     "projectType": "library",
     "sourceRoot": "libs/shared/infra/gqlgen/src",
     "tags": [
