--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -5,6 +5,7 @@
     "rootDirs": ["*", "libs"],
     "sourceMap": true,
     "composite": true,
+    "incremental": true,
     "declaration": true,
     "moduleResolution": "bundler",
     "module": "esnext",
@@ -19,7 +20,7 @@
     "importHelpers": true,
     "target": "es2021",
     "types": ["node", "worker-loader"],
-    "typeRoots": ["types", "node_modules/@types"],
+    "typeRoots": ["types", "node_modules", "node_modules/@types"],
     "lib": ["es2021", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
