--- a/libs/tools/workspace/tsconfig.lib.json
+++ b/libs/tools/workspace/tsconfig.lib.json
@@ -4,15 +4,12 @@
     "outDir": "./dist",
     "declaration": true,
     "types": ["node"],
-    "resolveJsonModule": true,
-    "module": "CommonJS",
-    "moduleResolution": "Node"
+    "resolveJsonModule": true
   },
   "include": [
     "src/**/*.ts",
     "src/**/*.json",
     "src/generators/nx-project-config/vite-libs/files/vite.config.ts__tmpl__"
   ],
-  "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
-  "references": []
+  "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
