--- a/libs/tools/workspace/tsconfig.lib.json
+++ b/libs/tools/workspace/tsconfig.lib.json
@@ -4,7 +4,9 @@
     "outDir": "./dist",
     "declaration": true,
     "types": ["node"],
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "module": "CommonJS",
+    "moduleResolution": "Node"
   },
   "include": [
     "src/**/*.ts",
