--- a/package.json
+++ b/package.json
@@ -353,6 +353,7 @@
     "@types/concurrently": "6.4.0",
     "@types/cookie": "0.5.1",
     "@types/diff": "5.0.3",
+    "@types/eslint": "8.56.10",
     "@types/express": "4.17.21",
     "@types/flat": "5.0.2",
     "@types/fs-extra": "11.0.4",
