--- a/libs/frontend/application/dnd/tsconfig.lib.json
+++ b/libs/frontend/application/dnd/tsconfig.lib.json
@@ -20,7 +20,13 @@
     "src/**/*.spec.jsx",
     "src/**/*.test.jsx"
   ],
-  "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx"],
+  "include": [
+    "vite.config.ts",
+    "src/**/*.js",
+    "src/**/*.jsx",
+    "src/**/*.ts",
+    "src/**/*.tsx"
+  ],
   "references": [
     {
       "path": "../../../shared/abstract/types/tsconfig.lib.json"
