--- a/libs/frontend/domain/app/tsconfig.lib.json
+++ b/libs/frontend/domain/app/tsconfig.lib.json
@@ -10,8 +10,7 @@
     "strict": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "jsx": "react-jsx",
-    "allowJs": true
+    "jsx": "react-jsx"
   },
   "exclude": [
     "jest.config.ts",
