--- a/package.json
+++ b/package.json
@@ -450,6 +450,7 @@
     "nx": "20.8.0",
     "pino-pretty": "13.0.0",
     "postcss": "8.4.45",
+    "rollup-preserve-directives": "^1.1.3",
     "swc-loader": "0.2.6",
     "tailwindcss": "3.4.10",
     "ts-essentials": "9.1.2",
