--- a/libs/external/codelab-codegen/codelab-preset/package.json
+++ b/libs/external/codelab-codegen/codelab-preset/package.json
@@ -20,8 +20,10 @@
     "graphql-request": "6.0.0"
   },
   "exports": {
+    "./package.json": "./package.json",
     ".": {
-      "default": "./src/index.ts"
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
     }
   },
   "nx": {
