--- a/libs/tools/tsc-check/package.json
+++ b/libs/tools/tsc-check/package.json
@@ -4,8 +4,15 @@
   "dependencies": {
     "tslib": "^2.3.0"
   },
-  "type": "commonjs",
-  "main": "./src/index.js",
-  "typings": "./src/index.d.ts",
-  "private": true
+  "nx": {
+    "name": "tools-tsc-check",
+    "$schema": "../../../node_modules/nx/schemas/project-schema.json",
+    "sourceRoot": "libs/tools/tsc-check/src",
+    "projectType": "library",
+    "tags": [
+      "projectName:tsc-check",
+      "projectType:library",
+      "type:concrete"
+    ]
+  }
 }
