--- a/tsconfig.json
+++ b/tsconfig.json
@@ -512,6 +512,12 @@
     },
     {
       "path": "./apps/web"
+    },
+    {
+      "path": "./apps/landing"
+    },
+    {
+      "path": "./apps/demo"
     }
   ]
 }
