--- a/apps/cli/tsconfig.app.json
+++ b/apps/cli/tsconfig.app.json
@@ -2,17 +2,15 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "esModuleInterop": true,
-    "moduleResolution": "Node16",
-    "module": "Node16",
-    "sourceMap": true,
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "target": "es2021",
-    "experimentalDecorators": true,
     "strictNullChecks": true,
     "noImplicitAny": true,
     "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
+    "declarationMap": false,
     "types": ["node", "cypher", "multer"]
   },
   "exclude": ["jest.config.ts"],
