--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
     "@codelab-codegen/codelab-preset": "file:libs/external/codelab-codegen/codelab-preset/dist",
     "@codelab-codegen/typescript-fetch": "file:libs/external/codelab-codegen/typescript-fetch/dist",
     "@codelab-codegen/typescript-server-fetch": "file:libs/external/codelab-codegen/typescript-server-fetch/dist",
-    "@codelab/eslint-plugin": "file:libs/tools/eslint-plugin/dist",
     "@codelab/tools-workspace": "file:dist/libs/tools/workspace",
+    "@codelab/eslint-plugin": "workspace:*",
     "@codelab/tsc-check": "file:libs/tools/tsc-check/dist",
     "@codemirror/autocomplete": "6.12.0",
     "@codemirror/commands": "6.3.3",
