--- a/libs/frontend/cui/ui/molecules/package.json
+++ b/libs/frontend/cui/ui/molecules/package.json
@@ -8,7 +8,9 @@
       "default": "./dist/index.js"
     }
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@cui/ui-atoms": "workspace:*"
+  },
   "nx": {
     "name": "frontend-cui-ui-molecules",
     "projectType": "library",
