--- a/libs/tools/eslint-plugin/tsconfig.lib.json
+++ b/libs/tools/eslint-plugin/tsconfig.lib.json
@@ -1,11 +1,12 @@
 {
   "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "./dist",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "customConditions": null,
     "declaration": true,
     "types": ["node"]
   },
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts"],
-  "references": []
+  "include": ["src/**/*.ts"]
 }
