fix: working cli

--- a/apps/cli/project.json
+++ b/apps/cli/project.json
@@ -12,7 +12,7 @@
       "options": {
         "target": "node",
         "compiler": "tsc",
-        "outputPath": "apps/cli/dist",
+        "outputPath": "dist/apps/cli",
         "main": "apps/cli/src/main.ts",
         "tsConfig": "apps/cli/tsconfig.app.json",
         "assets": ["apps/cli/src/assets"],
