--- a/apps/cli/tsconfig.app.json
+++ b/apps/cli/tsconfig.app.json
@@ -13,5 +13,16 @@
     "noFallthroughCasesInSwitch": true
   },
   "exclude": ["jest.config.ts"],
-  "include": ["webpack.config.js", "src/**/*.ts"]
+  "include": ["webpack.config.js", "src/**/*.ts"],
+  "references": [
+    {
+      "path": "../../libs/backend/infra/adapter/cli/tsconfig.lib.json"
+    },
+    {
+      "path": "../../libs/shared/abstract/core/tsconfig.lib.json"
+    },
+    {
+      "path": "../../libs/backend/infra/adapter/logger/tsconfig.lib.json"
+    }
+  ]
 }
