--- a/libs/tools/eslint-plugin/tsconfig.lib.json
+++ b/libs/tools/eslint-plugin/tsconfig.lib.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
+    "outDir": "./dist",
     "module": "commonjs",
     "moduleResolution": "node",
     "customConditions": null,
