--- a/libs/tools/workspace/tsconfig.lib.json
+++ b/libs/tools/workspace/tsconfig.lib.json
@@ -7,10 +7,6 @@
     "module": "node16",
     "moduleResolution": "node16"
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.json",
-    "src/generators/nx-project-config/vite-libs/files/vite.config.ts__tmpl__"
-  ],
+  "include": ["src/**/*.ts", "src/**/*.json", "src/**/*.ts__tmpl__"],
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
