--- a/nx.json
+++ b/nx.json
@@ -13,8 +13,15 @@
           "targetName": "build",
           "configName": "tsconfig.lib.json",
           "buildDepsName": "build-deps",
-          "watchDepsName": "watch-deps"
+          "watchDepsName": "watch-deps",
+          "outputPath": "{projectRoot}/dist"
         }
+      }
+    },
+    {
+      "plugin": "@nx/eslint/plugin",
+      "options": {
+        "targetName": "lint"
       }
     },
     {
@@ -163,10 +170,10 @@
       },
       "dependsOn": ["^build"]
     },
-    "tsc-check": {
-      "cache": true,
-      "inputs": ["default", "^default", "{workspaceRoot}/tsconfig.base.json"]
-    },
+    // "tsc-check": {
+    //   "cache": true,
+    //   "inputs": ["default", "^default", "{workspaceRoot}/tsconfig.base.json"]
+    // },
     "@nx/jest:jest": {
       "cache": true,
       "defaultConfiguration": "test",
@@ -228,11 +235,6 @@
           "errorOnUnmatchedPattern": false
         }
       }
-    },
-    "@nx/js:swc": {
-      "cache": true,
-      "dependsOn": [],
-      "inputs": ["production", "^production"]
     }
   },
   "namedInputs": {
